Tree: don't prevent line wrapping in bread crumb mode
Especially important in mobile mode where a form may be embedded. If
that form has textual content text wrapping was prevented.

177770

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.less
@@ -227,7 +227,7 @@
     & > .animation-wrapper > .tree-node {
       overflow: visible;
       text-align: center;
-
+      white-space: normal;
       display: none;
       border-top: 0;
       border-bottom: 1px solid @border-color;
